kernel/tests/snapshots/runtime_cli_snapshots/normalize_review__need_input.snap
---
source: tests/runtime_cli_snapshots.rs
assertion_line: 447
expression: response
---
{
  "output": {
    "response": {
      "allow_new_obligations": true,
      "assumption_authoring_request": false,
      "audit_request": null,
      "authorized_nodes": [],
      "cleanup_dismiss_tasks": [],
      "cleanup_next_task": null,
      "cleanup_request_reaudit": false,
      "clear_human_input": false,
      "comments": "",
      "confirm_protected_semantic_change_scope": false,
      "consume_global_repair_grant": false,
      "cycle": 6,
      "decision": "NeedInput",
      "difficulty_updates": {},
      "dismiss_audit_plan": false,
      "dismissed_tasks": [],
      "global_repair_request": null,
      "must_close_active": false,
      "next_active": null,
      "next_active_coarse": null,
      "next_mode": "Global",
      "next_worker_context_mode": "resume",
      "paper_focus_ranges": [],
      "paper_grounding": {
        "basis_summary": "",
        "consulted_cited_ranges": false
      },
      "protected_semantic_change_nodes": [],
      "reason": "Want operator guidance on the proof sketch.",
      "request_id": 10,
      "request_sound_verifier_nodes": [],
      "reset": "None",
      "reset_blockers": [],
      "reset_node": null,
      "status": "Ok",
      "stuck_math_audit": null,
      "task_blockers": [],
      "work_style_hint": "none"
    }
  },
  "status": "normalize_review_ok"
}
